# TradingManager

./: .gitignore  CMakeLists.txt  Dockerfile  FileTradeRepository.cpp  FileTradeRepository.h  Portfolio.cpp  Portfolio.h  README.md  Trade.cpp  Trade.h  TradeInputHandler.cpp  TradeInputHandler.h  TradePrinter.cpp  TradePrinter.h  TradeSerializer.h  TradingManager.cpp  TradingManager.slnx  TradingManager.vcxproj  TradingManager.vcxproj.filters  test_trade.cpp
.github/workflows/: ci.yml
src/: FileTradeRepository.cpp  FileTradeRepository.h  ITradeRepository.h  Portfolio.cpp  Portfolio.h  SortRegistry.h  Trade.cpp  Trade.h  TradeInputHandler.cpp  TradeInputHandler.h  TradePrinter.cpp  TradeSerializer.cpp  TradeSerializer.h  TradingConstants.h  TradingManager.cpp
tests/: CMakeLists.txt  test_filetraderepository.cpp  test_portfolio.cpp  test_trade.cpp  test_tradeserializer.cpp
